--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,6 +21,7 @@
             android:id="@+id/cardOneCardView"
             android:layout_width="190dp"
 
+            android:onClick="showPopup"
 
             android:layout_height="160dp"
             android:layout_margin="5dp"
@@ -61,40 +62,47 @@
                     android:text="Check your bank activities" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
-            android:foreground="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:layout_height="160dp"
+            android:id="@+id/cardTwoCardView"
             android:layout_width="190dp"
-            android:layout_margin="5dp">
+            android:layout_height="160dp"
+            android:layout_margin="5dp"
+            android:clickable="true"
+            android:foreground="?android:attr/selectableItemBackground">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <ImageView
-                    android:layout_height="64dp"
                     android:layout_width="64dp"
+                    android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundpink"
-                    android:src="@drawable/ic_lightbulb_outline_black_24dp"
-                    android:padding="10dp"/>
+                    android:padding="10dp"
+                    android:src="@drawable/ic_lightbulb_outline_black_24dp" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
                     android:layout_marginTop="10dp"
-                    android:text="Ideas"/>
+                    android:text="Ideas"
+                    android:textStyle="bold" />
+
                 <View
-                    android:layout_height="10dp"
                     android:layout_width="match_parent"
-                    android:background="@color/lightgray"
-                    android:layout_margin="10dp"/>
+                    android:layout_height="10dp"
+                    android:layout_margin="10dp"
+                    android:background="@color/lightgray" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Check your bank activities"
-                    android:padding="5dp"/>
+                    android:padding="5dp"
+                    android:text="Check your bank activities" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
