--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toBottomOf="@+id/secondActivityButton" />
 
     <EditText
-        android:id="@+id/writeToFileEditText"
+        android:id="@+id/amountEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -41,7 +41,7 @@
         android:layout_marginTop="36dp"
         android:text="Remove"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/writeToFileEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/amountEditText" />
 
     <Button
         android:id="@+id/addButton"
@@ -51,7 +51,7 @@
         android:layout_marginTop="36dp"
         android:text="Add"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/writeToFileEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/amountEditText" />
 
     <Button
         android:id="@+id/secondActivityButton"
@@ -64,7 +64,7 @@
         app:layout_constraintEnd_toStartOf="@+id/removeButton"
         app:layout_constraintHorizontal_bias="0.511"
         app:layout_constraintStart_toEndOf="@+id/addButton"
-        app:layout_constraintTop_toBottomOf="@+id/writeToFileEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/amountEditText" />
 
     <TextView
         android:id="@+id/previouslyInitTextView"
