--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -59,7 +59,7 @@
         app:layout_constraintTop_toBottomOf="@+id/secondActivityTextView" />
 
     <EditText
-        android:id="@+id/writeToFileEditText"
+        android:id="@+id/amountEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
