--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="darkblue">#23283a</color>
     <color name="testcolorblue">#152b38</color>
     <color name="pink">#fe104d</color>
+    <color name="popupBG">#2f333f</color>>
+    <color name="white">#fff</color>>
 
     <color name="black_overlay">#66000000</color>
 </resources>
