--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,11 @@
         android:text="Results"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/secondActivityButton" />
+        app:layout_constraintTop_toBottomOf="@+id/secondActivityButton"
+        app:layout_constraintVertical_bias="0.468" />
 
     <EditText
         android:id="@+id/amountEditText"
@@ -27,7 +29,8 @@
         android:layout_marginTop="36dp"
         android:ems="10"
         android:hint="Enter a new entry"
-        android:inputType="textPersonName"
+        android:inputType="none"
+        android:editable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,31 +42,18 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="36dp"
-        android:text="Remove"
+        android:text="Dequeue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/amountEditText" />
-
-    <Button
-        android:id="@+id/addButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="36dp"
-        android:text="Add"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/amountEditText" />
 
     <Button
         android:id="@+id/secondActivityButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginEnd="44dp"
         android:layout_marginTop="36dp"
         android:text="2nd Activity"
         app:layout_constraintEnd_toStartOf="@+id/removeButton"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintStart_toEndOf="@+id/addButton"
         app:layout_constraintTop_toBottomOf="@+id/amountEditText" />
 
     <TextView
