--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="pink">#fe104d</color>
     <color name="popupBG">#2f333f</color>>
     <color name="white">#fff</color>>
+    <color name="lightblue">#ADD8E6</color>>
 
     <color name="black_overlay">#66000000</color>
 </resources>
