--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -45,6 +45,7 @@
                     android:layout_height="64dp"
                     android:background="@drawable/circlebackgroundpurple"
                     android:padding="10dp"
+
                     android:src="@drawable/ic_control_point_black_24dp"/>
 
                 <TextView
@@ -65,7 +66,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Add a new entry" />
+                    android:text="Log a recent purcahse" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -184,14 +185,14 @@
                     android:layout_height="64dp"
                     android:layout_width="64dp"
                     android:background="@drawable/circlebackgroundyellow"
-                    android:src="@drawable/ic_whatshot_black_24dp"
+                    android:src="@drawable/ic_assignment_turned_in_black_24dp"
                     android:padding="10dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_marginTop="10dp"
-                    android:text="Streak"/>
+                    android:text="Records"/>
                 <View
                     android:layout_height="10dp"
                     android:layout_width="match_parent"
@@ -201,7 +202,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="View your budget records"
+                    android:text="View your budgeting skills"
                     android:padding="5dp"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
