--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="popupBG">#2f333f</color>>
     <color name="white">#fff</color>>
     <color name="lightblue">#ADD8E6</color>>
+    <color name="colorTransparentWhite">#cccccc</color>>
 
     <color name="black_overlay">#66000000</color>
 </resources>
