--- a/app/src/main/res/layout/newentrypopup.xml
+++ b/app/src/main/res/layout/newentrypopup.xml
@@ -56,18 +56,24 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_height="40dp"
+                android:layout_width="85dp"
+                >
+
             <TextView
                 android:layout_height="40dp"
                 android:layout_width="wrap_content"
-                android:text="Amount"
+                android:text="@string/amount"
                 android:textStyle="bold"
                 android:textColor="@color/black_overlay"
                 android:gravity="center"
                 android:textSize="18dp"
                 />
+            </LinearLayout>
 
             <EditText
-                android:layout_marginLeft="150dp"
+                android:layout_marginLeft="135dp"
                 android:id="@+id/amountEditText"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
@@ -80,6 +86,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_height="40dp"
+                android:layout_width="85dp"
+                >
             <TextView
                 android:layout_height="40dp"
                 android:layout_width="wrap_content"
@@ -89,7 +99,7 @@
                 android:gravity="center"
                 android:textSize="18dp"
                 />
-
+            </LinearLayout>
             <EditText
                 android:layout_marginLeft="29dp"
                 android:id="@+id/dateEditText"
@@ -104,6 +114,11 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_height="40dp"
+                android:layout_width="85dp"
+                >
+
             <TextView
                 android:layout_height="40dp"
                 android:layout_width="wrap_content"
@@ -113,9 +128,9 @@
                 android:gravity="center"
                 android:textSize="18dp"
                 />
-
+            </LinearLayout>
             <EditText
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="29dp"
                 android:id="@+id/locationEditText"
                 android:layout_width="251dp"
                 android:layout_height="wrap_content"
@@ -129,6 +144,10 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_height="40dp"
+                android:layout_width="85dp"
+                >
             <TextView
                 android:layout_height="40dp"
                 android:layout_width="wrap_content"
@@ -138,9 +157,9 @@
                 android:gravity="center"
                 android:textSize="18dp"
                 />
-
+            </LinearLayout>
             <EditText
-                android:layout_marginLeft="3dp"
+                android:layout_marginLeft="29dp"
                 android:id="@+id/detailsEditText"
                 android:layout_width="267dp"
                 android:layout_height="wrap_content"
