--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeRefresh"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:visibility="visible">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +16,8 @@
     android:padding="10dp"
     android:background="@color/backgroundcolor"
     android:gravity="center">
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -87,19 +96,23 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/circlebackgroundpink"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_lightbulb_outline_black_24dp" />
-
                 <TextView
+                    android:id="@+id/budgetNumTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="BUDGET LEFT BOX"
+                    android:textSize="40dp"
+                    android:gravity="center"
+                    android:textColor="@color/green"
+                    android:text="$11800"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/underOverTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Under/Over Budget"
                     android:textStyle="bold" />
 
                 <View
@@ -109,11 +122,12 @@
                     android:background="@color/lightgray" />
 
                 <TextView
+                    android:id="@+id/resetTimeLeftEditText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:padding="5dp"
-                    android:text="Under/Over Weekly Budget" />
+                    android:text="Budget Resets in 2 Days" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -303,3 +317,4 @@
     </LinearLayout>
 
 </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
