--- a/app/src/main/res/layout/infopopup.xml
+++ b/app/src/main/res/layout/infopopup.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="350dp"
-    android:layout_height="90dp"
+    android:layout_height="180dp"
     android:background="@color/lightgray"
     android:padding="7dp"
     android:layout_gravity="center"
@@ -23,6 +23,7 @@
         android:text="@string/info"
         android:paddingTop="10dp"
         android:layout_gravity="center"
+        android:gravity="center"
         android:textSize="20dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
