--- a/app/src/main/res/layout/newentrypopup.xml
+++ b/app/src/main/res/layout/newentrypopup.xml
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:layout_gravity="start"
         android:textSize="18dp"
-        android:background="@drawable/circlebackgroundgreen"
+        android:background="@drawable/circlebackgroundpink"
 
         />
     <TextView
@@ -49,7 +49,7 @@
             android:layout_width="match_parent"
             android:text="New Entry"
             android:textStyle="bold"
-            android:textColor="@color/lightblue"
+            android:textColor="@color/green"
             android:gravity="center"
             android:textSize="26dp"/>
         <LinearLayout
@@ -73,14 +73,14 @@
             </LinearLayout>
 
             <EditText
-                android:layout_marginLeft="135dp"
                 android:id="@+id/amountEditText"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="135dp"
 
                 android:ems="10"
                 android:hint="Ex. 9.99"
-                android:inputType="numberDecimal" />
+                android:inputType="numberSigned|numberDecimal" />
         </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
