--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,8 @@
     <color name="popupBG">#2f333f</color>>
     <color name="white">#fff</color>>
     <color name="lightblue">#ADD8E6</color>>
-    <color name="colorTransparentWhite">#cccccc</color>>
+    <color name="colorTransparentWhite">#cccccc</color>
+    <color name="deficit">#ff1744</color>>
 
     <color name="black_overlay">#66000000</color>
 </resources>
