--- a/app/src/main/res/layout/log_listview_detail.xml
+++ b/app/src/main/res/layout/log_listview_detail.xml
@@ -40,4 +40,15 @@
         android:layout_marginTop="24dp"
         android:text="$Amount"
         android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/newTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/logDetailsTextView"
+        android:layout_alignEnd="@+id/logAmountTextView"
+        android:background="@drawable/new_bg"
+        android:text="New!"
+        android:textSize="10sp"
+        android:visibility="visible" />
 </RelativeLayout>
