--- a/app/src/main/res/layout/newentrypopup.xml
+++ b/app/src/main/res/layout/newentrypopup.xml
@@ -69,15 +69,22 @@
                 android:textColor="@color/black_overlay"
                 android:gravity="center"
                 android:textSize="18dp"
+
                 />
             </LinearLayout>
-
+            <TextView
+                android:layout_height="40dp"
+                android:textColor="@color/green"
+                android:layout_width="wrap_content"
+                android:text="$"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginLeft="120dp"
+                />
             <EditText
                 android:id="@+id/amountEditText"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="135dp"
-
                 android:ems="10"
                 android:hint="Ex. 9.99"
                 android:inputType="numberSigned|numberDecimal" />
@@ -100,14 +107,15 @@
                 android:textSize="18dp"
                 />
             </LinearLayout>
+
             <EditText
-                android:layout_marginLeft="29dp"
                 android:id="@+id/dateEditText"
                 android:layout_width="259dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="29dp"
 
                 android:ems="10"
-                android:hint="(Default: Now)"
+                android:hint="YYYY-MM-DD"
                 android:inputType="datetime" />
         </LinearLayout>
         <LinearLayout
