--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,17 +6,175 @@
     android:layout_height="match_parent"
     tools:context=".DetailActivity">
 
-    <TextView
-        android:id="@+id/detailActivityTextView"
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:layout_marginTop="150dp"
+            android:layout_marginBottom="30dp"
+            android:layout_height="40dp"
+            android:layout_width="match_parent"
+            android:text="Update Entry"
+            android:textStyle="bold"
+            android:textColor="@color/green"
+            android:gravity="center"
+            android:textSize="26dp"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_height="40dp"
+                android:layout_width="100dp"
+                >
+
+                <TextView
+                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"
+                    android:text="@string/amount"
+                    android:textStyle="bold"
+                    android:textColor="@color/black_overlay"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:layout_marginLeft="20dp"
+                    />
+            </LinearLayout>
+            <TextView
+                android:layout_height="40dp"
+                android:textColor="@color/green"
+                android:layout_width="wrap_content"
+                android:text="$"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:layout_marginLeft="158dp"
+
+                />
+            <EditText
+                android:id="@+id/amountEditTextDetailActivity"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="Ex. 9.99"
+                android:inputType="numberSigned|numberDecimal" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_height="40dp"
+                android:layout_width="100dp"
+                >
+                <TextView
+                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"
+                    android:text="@string/date"
+                    android:textStyle="bold"
+                    android:textColor="@color/black_overlay"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:layout_marginLeft="20dp"
+                    />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/dateEditTextDetailActivity"
+
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_width="259dp"
+                android:ems="10"
+                android:hint="YYYY-MM-DD"
+                android:inputType="datetime" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_height="40dp"
+                android:layout_width="100dp"
+                >
+
+                <TextView
+                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"
+                    android:text="@string/location"
+                    android:textStyle="bold"
+                    android:textColor="@color/black_overlay"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:layout_marginLeft="20dp"
+                    />
+            </LinearLayout>
+            <EditText
+                android:id="@+id/locationEditTextDetailActivity"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_width="259dp"
+                android:ems="10"
+                android:hint="Ex. The Supermarket"
+                android:inputType="textShortMessage"
+                android:visibility="visible" />
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_height="40dp"
+                android:layout_width="100dp"
+                >
+                <TextView
+                    android:layout_height="40dp"
+                    android:layout_width="wrap_content"
+                    android:text="@string/details"
+                    android:textStyle="bold"
+                    android:textColor="@color/black_overlay"
+                    android:gravity="center"
+                    android:textSize="18dp"
+                    android:layout_marginLeft="20dp"
+                    />
+            </LinearLayout>
+            <EditText
+                android:id="@+id/detailsEditTextDetailActivity"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_width="259dp"
+                android:ems="10"
+                android:hint="Ex. Bananas for new diet"
+                android:inputType="textLongMessage" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/updateButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40dp"
+            android:text="Update"
+            android:textSize="16sp" />
+        <!--
+        android:onClick="showConfirmPopUp"
+        -->
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="delete this entry"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </android.support.constraint.ConstraintLayout>
