--- a/app/src/main/res/layout/slide_layout.xml
+++ b/app/src/main/res/layout/slide_layout.xml
@@ -22,6 +22,7 @@
         android:layout_above="@+id/bodyTextView"
         android:layout_centerHorizontal="true"
         android:text="HEADING"
+        
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold" />
@@ -29,11 +30,12 @@
     <TextView
         android:id="@+id/bodyTextView"
         android:layout_width="match_parent"
-        android:layout_height="193dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:gravity="center"
         android:padding="35dp"
+
         android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. lorem Ipsum has been the industry's standard dummy text ever since the"
         android:textColor="@color/lightgray"
         android:textSize="24sp" />
