--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="80dp"
             android:layout_marginBottom="30dp"
             android:layout_height="40dp"
             android:layout_width="match_parent"
@@ -151,12 +151,15 @@
 
         <Button
             android:id="@+id/updateButton"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:text="Update"
-            android:textSize="16sp" />
+            android:textColor="@color/darkSeaGreen"
+            android:textSize="40dp" />
         <!--
         android:onClick="showConfirmPopUp"
         -->
@@ -165,15 +168,17 @@
 
     <Button
         android:id="@+id/deleteButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="delete this entry"
-        android:textSize="24sp"
+        android:textSize="30sp"
+        android:textColor="@color/deficit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 
