--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,6 +78,100 @@
                     android:text="Log a recent purcahse" />
             </LinearLayout>
         </android.support.v7.widget.CardView>
+        <!--
+        FOURTH CARDVIEW
+        -->
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardFourCardView"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:layout_height="160dp"
+            android:layout_width="190dp"
+            android:layout_margin="5dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:layout_height="64dp"
+                    android:layout_width="64dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/circlebackgroundyellow"
+                    android:src="@drawable/ic_assignment_turned_in_black_24dp"
+                    android:padding="10dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:text="Records"/>
+                <View
+                    android:layout_height="10dp"
+                    android:layout_width="match_parent"
+                    android:background="@color/lightgray"
+                    android:layout_margin="10dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="View your budgeting skills"
+                    android:padding="5dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <!--
+         THIRD CARDVIEW
+         -->
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardThreeCardView"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:layout_height="160dp"
+            android:layout_width="190dp"
+            android:layout_margin="5dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:gravity="center">
+                <ImageView
+                    android:layout_height="64dp"
+                    android:layout_width="64dp"
+                    android:layout_marginTop="5dp"
+                    android:background="@drawable/circlebackgroundlog"
+                    android:src="@drawable/ic_format_list_bulleted_black_24dp"
+                    android:padding="10dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:layout_marginTop="10dp"
+                    android:text="Logs"/>
+                <View
+                    android:layout_height="10dp"
+                    android:layout_width="match_parent"
+                    android:background="@color/lightgray"
+                    android:layout_margin="10dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="View previous entries"
+                    android:padding="5dp"/>
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
 
         <!--
          SECOND CARDVIEW
@@ -138,12 +232,11 @@
         android:clipToPadding="false"
         android:gravity="center"
         android:orientation="horizontal">
-
         <!--
-         THIRD CARDVIEW
+         Fifth CARDVIEW
          -->
         <android.support.v7.widget.CardView
-            android:id="@+id/cardThreeCardView"
+            android:id="@+id/cardFiveCardView"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:layout_height="160dp"
@@ -158,15 +251,15 @@
                     android:layout_height="64dp"
                     android:layout_width="64dp"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/circlebackgroundgreen"
-                    android:src="@drawable/ic_format_list_bulleted_black_24dp"
+                    android:background="@drawable/circlebackgroundred"
+                    android:src="@drawable/ic_format_paint_black_24dp"
                     android:padding="10dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_marginTop="10dp"
-                    android:text="Logs"/>
+                    android:text="Tags"/>
                 <View
                     android:layout_height="10dp"
                     android:layout_width="match_parent"
@@ -176,22 +269,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="View previous entries"
+                    android:text="Manage your tags"
                     android:padding="5dp"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
         <!--
-         FOURTH CARDVIEW
+         Sixth CARDVIEW
          -->
         <android.support.v7.widget.CardView
-            android:id="@+id/cardFourCardView"
+            android:id="@+id/cardSixCardView"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:layout_height="160dp"
             android:layout_width="190dp"
-            android:layout_margin="5dp"
-            >
-
+            android:layout_margin="5dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -201,15 +292,15 @@
                     android:layout_height="64dp"
                     android:layout_width="64dp"
                     android:layout_marginTop="5dp"
-                    android:background="@drawable/circlebackgroundyellow"
-                    android:src="@drawable/ic_assignment_turned_in_black_24dp"
+                    android:background="@drawable/circlebackgroundsoftpurple"
+                    android:src="@drawable/ic_insert_chart_black_24dp"
                     android:padding="10dp"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_marginTop="10dp"
-                    android:text="Records"/>
+                    android:text="Analysis"/>
                 <View
                     android:layout_height="10dp"
                     android:layout_width="match_parent"
@@ -219,7 +310,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="View your budgeting skills"
+                    android:text="Review your spending"
                     android:padding="5dp"/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
@@ -232,10 +323,10 @@
         android:gravity="center"
         android:orientation="horizontal">
         <!--
-         FIFTH CARDVIEW
+         Seventh CARDVIEW
          -->
         <android.support.v7.widget.CardView
-            android:id="@+id/cardFiveCardView"
+            android:id="@+id/cardSevenCardView"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:layout_height="160dp"
@@ -273,10 +364,10 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
         <!--
-         SIXTH CARDVIEW
+         Eighth CARDVIEW
          -->
         <android.support.v7.widget.CardView
-            android:id="@+id/cardSixCardView"
+            android:id="@+id/cardEightCardView"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
             android:layout_height="160dp"
@@ -315,6 +406,7 @@
         </android.support.v7.widget.CardView>
 
     </LinearLayout>
+
 
 </LinearLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
