--- a/app/src/main/res/layout/newentrypopup.xml
+++ b/app/src/main/res/layout/newentrypopup.xml
@@ -180,9 +180,9 @@
         <Button
             android:id="@+id/submitButton"
 
-
-
-            android:layout_width="wrap_content"
+            android:textColor="@color/darkSeaGreen"
+            android:textSize="40dp"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
